# klickbrick

./: poetry.toml  pyproject.toml
.github/workflows/: python-ci.yaml  python-publish.yaml
klickbrick/cli/: __init__.py  __main__.py  hello.py  klickbrick.py
tests/: test_hello_command.py
